# esp-nvs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  justfile
esp-nvs/: Cargo.toml  rust-toolchain.toml
esp-nvs-partition-tool/: Cargo.toml
esp-nvs/.cargo/: config.toml
esp-nvs/src/: platform.rs
example/: Cargo.toml  justfile  rust-toolchain.toml
example/.cargo/: config.toml
