[package]
name = "esp-nvs-partition-tool"
version = "0.5.0"
edition = "2024"
rust-version = "1.87"
authors = ["Lars Hemala", "Nicholas Loubser"]
repository = "https://github.com/lhemala/esp-nvs/"
license = "MIT OR Apache-2.0"
description = "ESP-IDF compatible NVS partition table parser and generator"
keywords = ["esp", "embedded", "nvs", "partition", "esp-idf"]
categories = ["command-line-utilities", "embedded", "parsing"]

[lib]
name = "esp_nvs_partition_tool"
path = "src/lib.rs"

[[bin]]
name = "esp-nvs-partition-tool"
path = "src/bin/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap"]

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.60", features = ["derive"], optional = true }
csv = "1.4.0"
esp-nvs = { version = "0.5.0", path = "../esp-nvs" }
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"


[dev-dependencies]
similar = "2"
tempfile = "3.25.0"
