[package]
edition = "2024"
name = "example"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "example"
path = "./src/bin/main.rs"

[features]
default = ["esp32c3"]
# Chip selection — enable exactly one
esp32 = [
    "esp-hal/esp32",
    "esp-bootloader-esp-idf/esp32",
    "esp-backtrace/esp32",
    "esp-println/esp32",
    "esp-storage/esp32",
    "esp-nvs/esp32",
]
esp32s2 = [
    "esp-hal/esp32s2",
    "esp-bootloader-esp-idf/esp32s2",
    "esp-backtrace/esp32s2",
    "esp-println/esp32s2",
    "esp-storage/esp32s2",
    "esp-nvs/esp32s2",
]
esp32s3 = [
    "esp-hal/esp32s3",
    "esp-bootloader-esp-idf/esp32s3",
    "esp-backtrace/esp32s3",
    "esp-println/esp32s3",
    "esp-storage/esp32s3",
    "esp-nvs/esp32s3",
]
esp32c2 = [
    "esp-hal/esp32c2",
    "esp-bootloader-esp-idf/esp32c2",
    "esp-backtrace/esp32c2",
    "esp-println/esp32c2",
    "esp-storage/esp32c2",
    "esp-nvs/esp32c2",
]
esp32c3 = [
    "esp-hal/esp32c3",
    "esp-bootloader-esp-idf/esp32c3",
    "esp-backtrace/esp32c3",
    "esp-println/esp32c3",
    "esp-storage/esp32c3",
    "esp-nvs/esp32c3",
]
esp32c5 = [
    "esp-hal/esp32c5",
    "esp-bootloader-esp-idf/esp32c5",
    "esp-backtrace/esp32c5",
    "esp-println/esp32c5",
    "esp-storage/esp32c5",
    "esp-nvs/esp32c5",
]
esp32c6 = [
    "esp-hal/esp32c6",
    "esp-bootloader-esp-idf/esp32c6",
    "esp-backtrace/esp32c6",
    "esp-println/esp32c6",
    "esp-storage/esp32c6",
    "esp-nvs/esp32c6",
]
esp32c61 = [
    "esp-hal/esp32c61",
    "esp-bootloader-esp-idf/esp32c61",
    "esp-backtrace/esp32c61",
    "esp-println/esp32c61",
    "esp-storage/esp32c61",
    "esp-nvs/esp32c61",
]
esp32h2 = [
    "esp-hal/esp32h2",
    "esp-bootloader-esp-idf/esp32h2",
    "esp-backtrace/esp32h2",
    "esp-println/esp32h2",
    "esp-storage/esp32h2",
    "esp-nvs/esp32h2",
]

[dependencies]
esp-hal = { version = "~1.1.1", features = [
    "log-04",
    "unstable",
] }

esp-bootloader-esp-idf = { version = "0.5.0", features = [
    "log-04",
] }
log = "0.4.27"

cfg-if = "1.0.4"
critical-section = "1.2.0"
esp-alloc = "0.10.0"
esp-backtrace = { version = "0.19.0", features = [
    "panic-handler",
    "println",
] }
esp-println = { version = "0.17.0", features = [
    "log-04",
] }
esp-storage = { version = "0.9.0"  }
esp-nvs = { version = "0.5.0", path = "../esp-nvs", default-features = false }

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug = 2     # prefer slower builds but better debugging experience
lto = 'fat'
opt-level = 's'
